# FypProjectComplete

./: Readme.md
Desktop_Application/: CMakeLists.txt  QTWidget.cpp  QTWidget.h  README.md  imageWidget.cpp  imageWidget.h  main.cpp  registration.cpp  registration.h  renderWidget.cpp  renderWidget.h  table.txt
Web_Application/: README.md
Web_Application/PatientsPortal/: app.js  package-lock.json  package.json
Web_Application/PatientsPortal/controller/: Media.js  appointment.js  auht.js  chat.js  doctor.js  hospital.js  params-resolver.js  pathreport.js  patient.js  radreport.js  report.js  superAdmin.js
Web_Application/PatientsPortal/docs/: apiDocs.json
Web_Application/PatientsPortal/model/: Conversation.js  Message.js  appointment.js  doctor.js  hospital.js  pathreport.js  patient.js  radreport.js  report.js  superAdmin.js
Web_Application/PatientsPortal/public/stylesheets/: style.css
Web_Application/PatientsPortal/routes/: appointment.js  auth.js  chat.js  doctor.js  hospital.js  pathreport.js  patient.js  radreport.js  report.js  superAdmin.js
Web_Application/PatientsPortal/validator/: index.js
Web_Application/ppfront/: .env  package-lock.json  package.json
Web_Application/ppfront/public/: index.html
Web_Application/ppfront/public/assets/images/: navy-bg
Web_Application/ppfront/src/: App.js  MainRouter.js  index.css
Web_Application/ppfront/src/appointment/: SinglePost.js  apiAppointment.js  appointments.js  newAppointment.js
Web_Application/ppfront/src/auth/: doctorprivate.js  hospitalprivate.js  index.js  privateRouter.js  superAdminprivate.js
Web_Application/ppfront/src/core/: Home.css  Home.js  Homecontent.js  Menu.js  patientDashboard.js  patientdashboard.module.css
Web_Application/ppfront/src/doctor/: DeleteDoctor.js  EditDoctor.js  appointmentRequests.js  chat.js  dashboard-content.js  dashboard.js  dashboard.module.css  doctorapi.js  doctorlogin.js  doctorlogin.module.css  doctorprofile.js  doctors.js
Web_Application/ppfront/src/doctor/Chat/: Chat.jsx  ChatBox.jsx  Conversations.jsx  fileUpload.js
Web_Application/ppfront/src/doctor/Layout/: Header.jsx
Web_Application/ppfront/src/doctor/Reports/: AllBloodReports.js  AllPathReports.js  AllTimeBasedReports.js  BloodReport.js  CreateReport.js  PathReport.js  Report1.css  Report1.js  Report2.js  ViewReport.js  checkReport.js  (+4 more)
Web_Application/ppfront/src/hospital/: PatientSignup.js  dashboard.js  doctordisplay.js  doctorsignup.js  hospiptaldashboard.js  hospital.css  hospitalapi.js  hospitaldashboard.module.css  hospitalsignin.js  hospitalsignup.js  patientdisplay.js
Web_Application/ppfront/src/patient/: AllbReports.js  AllpReports.js  BReport.js  DeletePatient.js  EditPatient.js  History.js  Patient.js  Profile.js  Signin.js  Signup.js  allReport.js  apiPatient.js  appointments.js  getAppointment.js  patientReport.js
Web_Application/ppfront/src/superAdmin/: CallEditHospital.js  DeleteHospital.js  EditHospital.js  RegisterHospital.js  displayHospital.js  superAdminapi.js  superAdmindashboard.js  superAdminsignin.js  superAdminsignup.js  superadmindashboard.module.css  superadmindashboardcontent.js
(+1 files in other folders)
